MDL-40833 theme - fixing centre align of sectionname headings

--- a/theme/bootstrapbase/less/moodle/course.less
+++ b/theme/bootstrapbase/less/moodle/course.less
@@ -31,7 +31,7 @@
 .section_add_menus .urlselect img.iconhelp {
     padding: 0;
     margin: 0;
-    vertical-align: middle;
+    vertical-align: text-bottom;
 }
 
 .site-topic ul.section,
@@ -201,9 +201,15 @@
 #page-site-index .subscribelink {
     text-align: right;
 }
+#page-site-index .headingblock {
+    margin-bottom: 9px;
+}
 
 .path-course-view a.reduce-sections {
     padding-left: 0.2em;
+}
+.path-course-view .headingblock {
+    margin-bottom: 9px;
 }
 .path-course-view .subscribelink {
     text-align: right;
@@ -324,7 +330,7 @@ span.editinstructions {
     padding: .3em;
 }
 .dndupload-preview img.icon {
-    vertical-align: middle;
+    vertical-align: text-bottom;
     padding: 0;
 }
 .dndupload-progress-outer {
